plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	exclusiveContent {
		forRepository {
			maven {
				name = "Modrinth"
				url = "https://api.modrinth.com/maven"
			}
		}
		filter {
			includeGroup "maven.modrinth"
		}
	}
	maven {
		url "https://repo.papermc.io/repository/maven-public/"
	}
	maven {
		url "https://repo.hypixel.net/repository/Hypixel/"
	}
	maven {
		name = 'sonatype-oss-snapshots1'
		url = 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
		mavenContent { snapshotsOnly() }
	}
	mavenLocal()
}

configurations {
	shaded {
		canBeResolved = true
		canBeConsumed = false
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	include(modImplementation("org.joml:joml:1.10.7"))

	shaded("net.kyori:adventure-text-serializer-legacy:4.25.0") {
		transitive = false
	}
	shaded("net.kyori:adventure-api:4.25.0")
	shaded("net.kyori:adventure-text-logger-slf4j:4.25.0") {
		transitive = false
	}
	shaded("net.kyori:adventure-nbt:4.25.0") {
		transitive = false
	}

	shaded("net.minestom:minestom:2026.02.19-1.21.11") {
		transitive = true
		exclude group: "net.kyori"
	}
	shaded("dev.hollowcube:polar:1.15.0") {
		transitive = true
		exclude group: "net.kyori"
	}

	modImplementation "net.hypixel:mod-api:${project.hypixel_mod_api}"
	modImplementation "maven.modrinth:hypixel-mod-api:${project.hypixel_fabric_mod_api}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation include('net.kyori:adventure-platform-mod-shared-fabric-repack:6.8.0')
	modImplementation include('net.kyori:adventure-platform-fabric:6.8.0') {
		transitive = false
	}

	configurations.shaded.dependencies.each {
		//include it
		implementation it
	}
}

tasks.register('copyShadedDependencies', Copy) {
	from configurations.shaded
	into "$buildDir/libs/shaded"
}

// Make the build task depend on copying shaded dependencies
build.dependsOn copyShadedDependencies

// Include shaded dependencies in the JAR
jar {
	from {
		configurations.shaded.collect {
			it.isDirectory() ? it : zipTree(it).matching {
				exclude 'META-INF/**'
				exclude 'net/minestom/server/adventure/provider/**'
			}
		}
	}
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}
